# nanoserver

./: .gitmodules  CMakeLists.txt  README.md  http.h  make.sh  make_test_cert.sh  request.h  server.c  socket_server.h
ext/: openssl-3.5.2
public/: index.html  script.js  styles.css
src/: request.h  server.c  socket_server.h  stringbuf.h
